@@ -5,7 +5,7 @@ import ui.common.OkSubmitDelegate;
 
 import javax.swing.*;
 import java.awt.*;
-import java.util.List;
+import java.util.Arrays;
 
 /**
  * @author MinPhone, Seid, Asrat
@@ -167,7 +167,7 @@ public class NewAccountDialog extends BaseDialog {
 
     @Override
     protected void btnOkActionPerformed() {
-        delegate.onSubmitClicked(List.of(textFieldName.getText(), textFieldEmail.getText(), textFieldAccNo.getText(),
+        delegate.onSubmitClicked(Arrays.asList(textFieldName.getText(), textFieldEmail.getText(), textFieldAccNo.getText(),
                 textFieldStreet.getText(), textFieldCity.getText(), textFieldState.getText(), textFieldZip.getText()));
     }
 
